--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon dist/index.js",
-    "build": "tsc -w && npm run nodemon",
+    "build": "tsc -w",
     "start": "node dist/index.js"
   },
   "author": "Daniel Mendoza",
