--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "pg-hstore": "^2.3.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
