--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "Cv app",
   "main": "index.js",
-  "compilerOptions" : {
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon dist/index.js",
     "build": "tsc -w",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node --files src/index.ts"
   },
   "author": "Daniel Mendoza",
   "license": "ISC",
