--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon dist/index.js",
     "build": "tsc -w",
-    "start": "ts-node --files src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "author": "Daniel Mendoza",
   "license": "ISC",
