--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "tsc",
     "nodemon": "nodemon dist/index.js",
-    "build": "tsc --w",
+    "build": "tsc",
     "start": "node dist/index.js",
     "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
